# ARDemo

./: .gitignore  CLAUDE.md  README.en.md  README.md  README_CN.md  README_EN.md  build-profile.json5  cc-harmony-ar-playbook.md  oh-package-lock.json5  oh-package.json5  readme_cn.md  readme_en.md
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/cpp/src/: app_napi.h  global.cpp  global.h  module.cpp  napi_manager.cpp  napi_manager.h
entry/src/main/cpp/src/arrowalign/: arrow_align_ar_application.cpp  arrow_align_ar_application.h  arrow_align_render_manager.cpp  arrow_align_render_manager.h  arrow_renderer.cpp  arrow_renderer.h
entry/src/main/cpp/src/depth/: depth_ar_application.cpp  depth_ar_application.h  depth_background_no_renderer.cpp  depth_background_no_renderer.h  depth_background_renderer.cpp  depth_background_renderer.h  depth_render_manager.cpp  depth_render_manager.h
entry/src/main/cpp/src/graphic/: GLUtils.cpp  GLUtils.h  RenderAttribute.cpp  RenderAttribute.h  RenderContext.cpp  RenderContext.h  RenderHeader.h  RenderObject.h  RenderSurface.cpp  RenderSurface.h
entry/src/main/cpp/src/image/: image_ar_application.cpp  image_ar_application.h  image_background_renderer.cpp  image_background_renderer.h  image_line_render.cpp  image_line_render.h  image_render_base.cpp  image_render_base.h  image_render_manager.cpp  image_render_manager.h
entry/src/main/cpp/src/mesh/: mesh_ar_application.cpp  mesh_ar_application.h  mesh_background_renderer.cpp  mesh_background_renderer.h  mesh_object_renderer.cpp  mesh_object_renderer.h  mesh_render_manager.cpp  mesh_render_manager.h  scenemesh_display_renderer.cpp  scenemesh_display_renderer.h
entry/src/main/cpp/src/nga/: nga_core.cpp  nga_core.h  nga_napi.cpp
entry/src/main/cpp/src/object/: arrow_geometry.cpp  arrow_geometry.h  disk_geometry.cpp  disk_geometry.h  disk_renderer.cpp  disk_renderer.h  object_ar_application.cpp  object_ar_application.h  object_math.h  object_render_manager.cpp  object_render_manager.h  ring_geometry.cpp  ring_geometry.h  ring_hunt_ar_application.cpp  ring_renderer.cpp  (+8 more)
entry/src/main/cpp/test/: object_math_test.cpp
(+101 files in other folders)
